--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "firefox-profile": "^4.0.0",
+    "ng-open-cv": "^0.3.1",
+    "ngx-webcam": "^0.3.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
